objects/ASI_KOR_Prepayment_Master__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipLabel>Prepayment Masters</relationshipLabel>
        <relationshipName>Prepayment_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion_Month__c</fullName>
        <label>Promotion Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion_Year__c</fullName>
        <label>Promotion Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SYS_External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Target_Unit_Cost__c</fullName>
        <label>Target Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Owner__c</fullName>
        <formula>ASI_KOR_Venue__r.Owner.LastName &amp; &quot;, &quot; &amp;  ASI_KOR_Venue__r.Owner.FirstName</formula>
        <label>Venue Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prepayment Masters</relationshipLabel>
        <relationshipName>Prepayment_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Prepayment Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Venue__c</columns>
        <columns>ASI_KOR_Venue_Owner__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Promotion_Year__c</columns>
        <columns>ASI_KOR_Promotion_Month__c</columns>
        <columns>ASI_KOR_Target_Unit_Cost__c</columns>
        <columns>ASI_KOR_Remarks__c</columns>
        <columns>ASI_KOR_SYS_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{0000000}</displayFormat>
        <label>Prepayment Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prepayment Masters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>